--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <main>
     <div class="section">
       <h2>🤖 Talk to the Assistant</h2>
-      <iframe>
+      <iframe
         src="https://web-chat.global.assistant.watson.appdomain.cloud/preview.html?region=au-syd&integrationID=26097caa-a84d-4d78-bb9d-dc349d971688&serviceInstanceID=3f6ee0cb-c7bb-474d-9a58-5b9c088d420b"
         allow="microphone;">
       </iframe>
