--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="section">
       <h2>🤖 Talk to the Assistant</h2>
       <iframe
-        src="https://web-chat.global.assistant.watson.appdomain.cloud/preview.html?region=au-syd&integrationID=26097caa-a84d-4d78-bb9d-dc349d971688&serviceInstanceID=3f6ee0cb-c7bb-474d-9a58-5b9c088d420b"
+        src=""
         allow="microphone;">
       </iframe>
       <p style="font-size: 0.85em; color: #888;">(Replace `integrationID` and `serviceInstanceID` with your actual values)</p>
