--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         src=""
         allow="microphone;">
       </iframe>
-      <p style="font-size: 0.85em; color: #888;">(Replace `integrationID` and `serviceInstanceID` with your actual values)</p>
+      <p style="font-size: 0.85em; color: #888;"></p>
     </div>
 
     <div class="section">
