--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   };
   setTimeout(function(){
     const t=document.createElement('script');
-    t.src="";
+    t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
     document.head.appendChild(t);
   });
 </script>
