--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
   <main>
     <div class="section">
       <h2>🤖 Talk to the Assistant</h2>
+      <!-- Replace this with your Watson Assistant web chat integration -->
       <iframe
         src=""
         allow="microphone;">
       </iframe>
+      <p style="font-size: 0.85em; color: #888;">(Replace `integrationID` and `serviceInstanceID` with your actual values)</p>
     </div>
 
     <div class="section">
