--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       padding: 30px 40px;
       max-width: 800px;
       margin: auto;
+      max-height: 90vh;
+      overflow: auto;
     }
     .section {
       background: white;
@@ -102,7 +104,7 @@
           <p>Jane Austen</p>
         </div>
         <div class="book-card">
-          <img src="https://covers.openlibrary.org/b/id/11522102-L.jpg" alt="Kafka on the Shore">
+          <img src="https://i.pinimg.com/1200x/f3/b5/a6/f3b5a62b8d5e9153e0d089b8140d88c6.jpg" alt="Kafka on the Shore">
           <h4>Kafka on the Shore</h4>
           <p>Haruki Murakami</p>
         </div>
