--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <p>Jane Austen</p>
         </div>
         <div class="book-card">
-          <img src="https://i.pinimg.com/1200x/f3/b5/a6/f3b5a62b8d5e9153e0d089b8140d88c6.jpg" alt="Kafka on the Shore">
+          <img src="https://m.media-amazon.com/images/I/81tdbrewW0L.jpg" alt="Kafka on the Shore">
           <h4>Kafka on the Shore</h4>
           <p>Haruki Murakami</p>
         </div>
@@ -117,6 +117,12 @@
           <img src="https://covers.openlibrary.org/b/id/15096597-M.jpg" alt="Coraline">
           <h4>Coraline</h4>
           <p>Neil Gaiman</p>
+        </div>
+        <div class="book-card">
+          <img src="<div class="book-card">
+          <img src="https://covers.openlibrary.org/b/id/15096597-M.jpg" alt="It Ends With Us">
+          <h4>It Ends With Us</h4>
+          <p>colleen Hoover</p>
         </div>
       </div>
     </div>
