--- a/index.html
+++ b/index.html
@@ -85,13 +85,10 @@
     <div class="section">
       <h2>🤖 Talk to the Assistant</h2>
       <p>Looking for your next great read? Meet Shelfie, our friendly and intelligent book assistant designed to help you discover books you’ll love.
-
-Shelfie makes book recommendations easy and personal. Whether you enjoy thrilling mysteries, heartwarming romance, inspiring non-fiction, or adventurous fantasy, Shelfie listens to your preferences and suggests titles that match your taste. You can ask for books by genre, author, mood, or even get summaries before deciding what to read.
-
-Fast, conversational, and fun to use – Shelfie is more than just a bot. It’s your reading companion, ready to help anytime you’re unsure what to read next.
-
-Just start a chat with Shelfie and let the stories unfold.
-Your next favorite book is only a conversation away.</p>
+        Shelfie makes book recommendations easy and personal. Whether you enjoy thrilling mysteries, heartwarming romance, inspiring non-fiction, or adventurous fantasy, Shelfie listens to your preferences and suggests titles that match your taste. You can ask for books by genre, author, mood, or even get summaries before deciding what to read.
+        Fast, conversational, and fun to use – Shelfie is more than just a bot. It’s your reading companion, ready to help anytime you’re unsure what to read next.
+        Just start a chat with Shelfie and let the stories unfold.
+        Your next favorite book is only a conversation away.</p>
       <iframe
         src=""
         allow="microphone;">
@@ -126,7 +123,7 @@ Your next favorite book is only a conversation away.</p>
           <p>Neil Gaiman</p>
         </div>
         <div class="book-card">
-          <img src="https://covers.openlibrary.org/b/id/15096597-M.jpg" alt="It Ends With Us">
+          <img src="https://m.media-amazon.com/images/I/81Wruxvu-kL._SL1500_.jpg" alt="It Ends With Us">
           <h4>It Ends With Us</h4>
           <p>Colleen Hoover</p>
         </div>
