--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       text-align: center;
     }
     main {
-      padding: 30px 40px;
+      padding: 20px 40px;
       max-width: 400px;
       margin: auto;
-      max-height: 90vh;
+      max-height: 400px;
       overflow: auto;
     }
     .section {
